--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,14 @@
 body {
   font-family: "helvetica", sans-serif;
-  text-align: center;
+}
+
+h1 {
+    padding-bottom: 2px;
+    border-bottom: 2px solid #DDD;
+}
+
+header {
+    font-style: italic;
+    color: darkgray;
+    margin-bottom: 10px;
 }
