--- a/templates/view.html
+++ b/templates/view.html
@@ -10,17 +10,15 @@
 <h2>{{recipe.name}}</h2>
 
 <div class="btn-group">
-  <a href="/books/{{recipe.id}}/edit" class="btn btn-primary btn-sm">
-    <i class="glyphicon glyphicon-edit"></i>
-    Edit
-  </a>
   <a href="/books/{{recipe.id}}/delete" class="btn btn-danger btn-sm">
     <i class="glyphicon glyphicon-trash"></i>
     Delete
   </a>
 </div>
 
-<h3>Ingredients</h3>
+<h3>Ingredients
+  <a href="/recipes/{{recipe.id}}/ingredients-edit" class="btn btn-primary btn-sm"><i class="glyphicon glyphicon-edit"></i>Edit</a>
+</h3>
 <table class="table">
   <thead>
   <tr>
@@ -42,7 +40,9 @@
   </tbody>
 </table>
 
-<h3>Directions</h3>
+<h3>Directions
+  <a href="/recipes/{{recipe.id}}/directions-edit" class="btn btn-primary btn-sm"><i class="glyphicon glyphicon-edit"></i></a>
+</h3>
 {% for idx in range(0,len) %}
   <b>{{ idx + 1 }}</b>
   <p>{{ directions[idx] }}</p>
