--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Bookshelf - Python on Google Cloud Platform</title>
+    <title>No Frills Recipes/title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
@@ -29,7 +29,7 @@
           <div class="navbar-brand">Bookshelf</div>
         </div>
         <ul class="nav navbar-nav">
-          <li><a href="/">Books</a></li>
+          <li><a href="/">Recipes</a></li>
         </ul>
       </div>
     </div>
