--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>No Frills Recipes/title>
+    <title>No Frills Recipes</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
@@ -26,7 +26,7 @@
     <div class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <div class="navbar-brand">Bookshelf</div>
+          <div class="navbar-brand">No Frills Recipes</div>
         </div>
         <ul class="nav navbar-nav">
           <li><a href="/">Recipes</a></li>
