Small cleanup of templates

--- a/templates/view.html
+++ b/templates/view.html
@@ -41,7 +41,7 @@
 </table>
 
 <h3>Directions
-  <a href="/recipe/{{recipe.id}}/directions-edit" class="btn btn-primary btn-sm"><i class="glyphicon glyphicon-edit"></i></a>
+  <a href="/recipe/{{recipe.id}}/edit-directions" class="btn btn-primary btn-sm"><i class="glyphicon glyphicon-edit"></i></a>
 </h3>
 {% for idx in range(0,len) %}
   <b>{{ idx+1 }}</b>
