--- a/templates/form.html
+++ b/templates/form.html
@@ -18,7 +18,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h3>{{action}} book</h3>
+<h3>{{action}} recipe</h3>
 
 <form method="POST" enctype="multipart/form-data">
 
