Convert to python classes for better control

--- a/templates/recipe_view.html
+++ b/templates/recipe_view.html
@@ -34,7 +34,7 @@
     <td>{{i.name}}</td>
     <td>{{i.amount}}</td>
     <td>{{i.measurement}}</td>
-    <td>{{i.comment}}</td>
+    <td>{{i.preparation}}</td>
   </tr>
   {% endfor %}
   </tbody>
