--- a/templates/recipe_view.html
+++ b/templates/recipe_view.html
@@ -17,7 +17,7 @@
 </div>
 
 <h3>Ingredients
-  <a href="/recipe/{{recipe.id}}/ingredients-edit" class="btn btn-primary btn-sm"><i class="glyphicon glyphicon-edit"></i>Edit</a>
+  <a href="/recipe/{{recipe.id}}/edit-ingredients" class="btn btn-primary btn-sm"><i class="glyphicon glyphicon-edit"></i>Edit</a>
 </h3>
 <table class="table">
   <thead>
