--- a/templates/directions_edit.html
+++ b/templates/directions_edit.html
@@ -10,7 +10,7 @@
 <body>
 <h1>{{recipe_name}}</h1>
 <form method="POST" enctype="multipart/form-data">
-    <div id="directions">
+    <div id="table-div" data-next-elem="{{size}}">
         {% for i in range(0,size) %}
           <div class="form-group">
               <input name="title{{i}}" value="{{directions[i].title}}">
@@ -18,9 +18,8 @@
           </div>
         {% endfor %}
     </div>
-    <div id="new-row" data-next-elem="{{size}}"></div>
 
-    <button type="button" onclick="addRow()">Add step</button>
+    <button type="button" onclick="addDirectionRow()">Add step</button>
     <button type="submit" class="btn btn-success">Save</button>
 </form>
 
