--- a/templates/recipe_view.html
+++ b/templates/recipe_view.html
@@ -12,6 +12,10 @@
 <h3>Ingredients
   <a href="/recipe/{{recipe.id}}/edit-ingredients" class="btn btn-primary btn-sm"><i class="glyphicon glyphicon-edit"></i>Edit</a>
 </h3>
+
+<div class="wrapper">
+
+</div>
 <table class="table">
   <thead>
   <tr>
